# mann-volterra-solver

./: CMakeLists.txt  README.md
src/: main.cpp
src/src/: kernel.hpp
src/src/src/src/: heat_problem.hpp
src/src/src/src/src/: mann_solver.hpp
src/src/src/src/src/src/: time_stepper.hpp
src/src/src/src/src/src/python/: scalability_plot.py
